2008-09-01  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* dllwrapper1/wine/Makefile.am:
	* src/Makefile.am:
	  Remove hack and move libs from LDFLAGS to LDADD to get deps right.

2008-08-31  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  more TODOs.

	* dllwrapper1/wine/module.c:
	* dllwrapper1/wine/pe_image.c:
	  Less logging.

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Update some debug, remove expection.

	* README:
	* src/bml.c:
	* src/dsplib/dsplib.cpp:
	  Add env var to limmit debug spew a bit more.
	  

2008-06-23  Krzysztof Foltman  <kfoltman@users.sf.net>

	* src/dsplib/Makefile:
	* src/dsplib/dsplib.cpp:
	* src/dsplib/dsplib.def: 
	  Add primitive implementation of DSPLib primitives with proper
	  exports (enough to make Bass 3 work), use single variable for
	  mingw32 prefix in Makefile.

2008-06-24  Stefan Kost  <ensonic@users.sf.net>

	patch by: Krzysztof Foltman  <kfoltman@users.sf.net>

	* README:
	* dllwrapper1/wine/pe_image.c:
	  What if there is now DllMain?

	* src/dsplib/Makefile:
	* src/dsplib/dsplib.def:
	  Add def file to get same symbol names as original dsplib.

	* src/dsplib/dsplib.cpp:
	  Structure source so that we can add dummies for the missing parts.


2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_process.c:
	  Add example for native plugins.

2008-06-17  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* dllwrapper1/wine/Makefile.am:
	* src/Makefile.am:
	  Different workaround for Bug #1981932.

2008-06-17  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper1/wine/Makefile.am:
	* src/Makefile.am:
	  Workaround for Bug #1981932.

2008-06-15  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  Rebuild.

	* src/dsplib/dsplib.cpp:
	* src/dsplib/dsplib.sln:
	* src/dsplib/dsplib.vcproj:
	  Add projects files and tweak the build.

2008-06-13  Stefan Kost  <ensonic@users.sf.net>

	* src/dsplib/Makefile:
	* src/dsplib/dsplib.cpp:
	  Adding dsplib rewrite donated by zubb.
